k8s-yamls/my_helm_demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-helm-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-helm-demo
  template:
    metadata:
      name: my-helm-demo
      labels:
        app: my-helm-demo
    spec:
      containers:
      - image: supertain147/my-helm-demo:v2
        name: my-helm-demo
