k8s-yamls/my_helm_demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-helm-demo-service
spec:
  ports:
  - port: 8989
    targetPort: 8989
    nodePort: 31889
    protocol: TCP
  selector:
    app: my-helm-demo
  type: NodePort
