k8s-yamls/helm_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: helm-demo-httproute
  namespace: traffic
spec:
  hostnames:
    - whoamixx.hjfu2022.tk
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: helm-demo-gateway
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: my-helm-demo-service
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /v1
